tests/baselines/reference/typeGuardOfFormTypeOfOther.types
=== tests/cases/conformance/expressions/typeGuards/typeGuardOfFormTypeOfOther.ts ===
class C { private p: string };
>C : C
>p : string

var str: string;
>str : string

var bool: boolean;
>bool : boolean

var num: number;
>num : number

var strOrNum: string | number;
>strOrNum : string | number

var strOrBool: string | boolean;
>strOrBool : string | boolean

var numOrBool: number | boolean
>numOrBool : number | boolean

var strOrNumOrBool: string | number | boolean;
>strOrNumOrBool : string | number | boolean

var strOrC: string | C;
>strOrC : string | C

var numOrC: number | C;
>numOrC : number | C

var boolOrC: boolean | C;
>boolOrC : boolean | C

var emptyObj: {};
>emptyObj : {}

var c: C;
>c : C

// A type guard of the form typeof x === s, 
// where s is a string literal with any value but 'string', 'number' or 'boolean',
//  - when true, removes the primitive types string, number, and boolean from the type of x, or
//  - when false, has no effect on the type of x.

if (typeof strOrC === "Object") {
>typeof strOrC === "Object" : boolean
>typeof strOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>strOrC : string | C
>"Object" : "Object"

    c = strOrC; // C
>c = strOrC : C
>c : C
>strOrC : C
}
else {
    var r2: string = strOrC; // string
>r2 : string
>strOrC : string
}
if (typeof numOrC === "Object") {
>typeof numOrC === "Object" : boolean
>typeof numOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>numOrC : number | C
>"Object" : "Object"

    c = numOrC; // C
>c = numOrC : C
>c : C
>numOrC : C
}
else {
    var r3: number  = numOrC; // number
>r3 : number
>numOrC : number
}
if (typeof boolOrC === "Object") {
>typeof boolOrC === "Object" : boolean
>typeof boolOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>boolOrC : boolean | C
>"Object" : "Object"

    c = boolOrC; // C
>c = boolOrC : C
>c : C
>boolOrC : C
}
else {
    var r4: boolean = boolOrC; // boolean
>r4 : boolean
>boolOrC : boolean
}
if (typeof strOrC === "Object" as string) { // comparison is OK with cast
>typeof strOrC === "Object" as string : boolean
>typeof strOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>strOrC : string | C
>"Object" as string : string
>"Object" : "Object"

    c = strOrC; // error: but no narrowing to C
>c = strOrC : string | C
>c : C
>strOrC : string | C
}
else {
    var r5: string = strOrC; // error: no narrowing to string
>r5 : string
>strOrC : string | C
}

if (typeof strOrNumOrBool === "Object") {
>typeof strOrNumOrBool === "Object" : boolean
>typeof strOrNumOrBool : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>strOrNumOrBool : string | number | boolean
>"Object" : "Object"

    let q1: {} = strOrNumOrBool; // {}
>q1 : {}
>strOrNumOrBool : never
}
else {
    let q2: string | number | boolean = strOrNumOrBool; // string | number | boolean
>q2 : string | number | boolean
>strOrNumOrBool : string | number | boolean
}

// A type guard of the form typeof x !== s, where s is a string literal,
//  - when true, narrows the type of x by typeof x === s when false, or
//  - when false, narrows the type of x by typeof x === s when true.
if (typeof strOrC !== "Object") {
>typeof strOrC !== "Object" : boolean
>typeof strOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>strOrC : string | C
>"Object" : "Object"

    var r2: string = strOrC; // string
>r2 : string
>strOrC : string
}
else {
    c = strOrC; // C
>c = strOrC : C
>c : C
>strOrC : C
}
if (typeof numOrC !== "Object") {
>typeof numOrC !== "Object" : boolean
>typeof numOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>numOrC : number | C
>"Object" : "Object"

    var r3: number = numOrC; // number
>r3 : number
>numOrC : number
}
else {
    c = numOrC; // C
>c = numOrC : C
>c : C
>numOrC : C
}
if (typeof boolOrC !== "Object") {
>typeof boolOrC !== "Object" : boolean
>typeof boolOrC : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>boolOrC : boolean | C
>"Object" : "Object"

    var r4: boolean = boolOrC; // boolean
>r4 : boolean
>boolOrC : boolean
}
else {
    c = boolOrC; // C
>c = boolOrC : C
>c : C
>boolOrC : C
}

if (typeof strOrNumOrBool !== "Object") {
>typeof strOrNumOrBool !== "Object" : boolean
>typeof strOrNumOrBool : "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
>strOrNumOrBool : string | number | boolean
>"Object" : "Object"

    let q1: string | number | boolean = strOrNumOrBool; // string | number | boolean
>q1 : string | number | boolean
>strOrNumOrBool : string | number | boolean
}
else {
    let q2: {} = strOrNumOrBool; // {}
>q2 : {}
>strOrNumOrBool : never
}

